# gp-vol-surface-alpha

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: default.yaml
data/: README.md
docs/: methodology.md
notebooks/: README.md
src/gpvol/: __init__.py
src/gpvol/backtest/: __init__.py  engine.py  metrics.py
src/gpvol/data/: __init__.py  cleaning.py  iv_surface.py  loader.py
src/gpvol/iv/: __init__.py  black_scholes.py
src/gpvol/optimization/: __init__.py  bayes_opt.py
src/gpvol/signal/: __init__.py  scoring.py
src/gpvol/surface/: __init__.py  gp_model.py  svi_model.py
src/gpvol/viz/: __init__.py  plots.py
tests/: README.md  test_backtest.py  test_black_scholes.py  test_cleaning.py  test_cross_validation.py  test_gp_model.py  test_iv_surface.py  test_loader.py  test_scoring.py  test_svi_model.py  test_viz.py
